--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,14 @@
     --secundario: #0097A7;
     --gris: #757575;
 }
+/*Global*/
 
 html{
     font-size: 62.5%;
+    box-sizing: border-box; /*Hack para Box Model*/
+}
+*, *:before, *::after{
+    box-sizing: inherit;
 }
 
 body{
@@ -16,21 +21,58 @@ body{
 }
 
 
-.titulo{
-    text-align: center;
-    font-size: 3.8rem;
-  
-}
-
-.titulo span{
-    font-size: 2rem;
-}
-
 .contenedor{
     max-width: 120rem;
     margin: 0 auto;
 }
 
+.boton{
+    background-color: var(--secundario);
+    color: var(--blanco);
+    padding: 1rem 3rem;
+    margin-top: 3rem;
+    font-size: 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: .5rem;
+    width: 90%;
+    text-align: center;
+}
+
+@media(min-width: 480px ){
+    .boton{
+        width: auto;
+    }
+}
+
+
+/*Tipografia*/
+
+h1 {
+    font-size: 3.8rem; 
+}
+
+h2 {
+    font-size: 2.8rem;
+}
+
+h3 {
+    font-size: 1.8rem;
+}
+
+h1, h2, h3{
+    text-align: center;
+}
+
+
+
+/*Titulos*/
+
+.titulo span{
+    font-size: 2rem;
+}
+/*Navegacion principal*/
 .nav-bg{
     background-color: var(--secundario);  
 }
@@ -64,12 +106,38 @@ body{
     color: var(--oscuro)
  }
 
+ /*Hero*/
+
  .hero{
     background-image: url(../img/hero.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    height: 450px;
+    position: relative;
  }
+.contenido-hero{
+    position:absolute;
+    background-color: rgba(0,0,0, .7);
+    background-color: rgb(0 0 0 / 70%);
+    width: 100%;
+    height: 100%;
 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;/*Code para alinear horizontal y verticalmente*/
+
+}
+
+.contenido-hero h2,
+.contenido-hero p{
+    color: var(--blanco);
+}
+
+.contenido-hero .ubicacion{
+    display: flex;
+    align-items: flex-end;
+}
 
 
  
