--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     --primario: #ffc107;
     --secundario: #0097A7;
     --gris: #757575;
+    --grisClaro: #DFE9F3
 }
 /*Global*/
 
@@ -18,6 +19,7 @@ html{
 body{
     font-size: 16px;
     font-family: 'Krub', sans-serif;
+    background-image: linear-gradient(to top, var(--grisClaro) 0%, var(--blanco) 100% );
 }
 
 
@@ -44,6 +46,13 @@ body{
     .boton{
         width: auto;
     }
+}
+
+.sombra{
+    box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.48);
+    background-color: var(--blanco);
+    padding: 2rem;
+    border-radius: 1rem;
 }
 
 
@@ -114,6 +123,7 @@ h1, h2, h3{
     background-size: cover;
     height: 450px;
     position: relative;
+    margin-bottom: 2rem;
  }
 .contenido-hero{
     position:absolute;
@@ -139,7 +149,35 @@ h1, h2, h3{
     align-items: flex-end;
 }
 
+/*Servicios*/
+@media(min-width: 768px ) {
+    .servicios{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);  
+        column-gap: 1rem;
+    }
+}
 
+.servicio{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.servicio h3{
+
+}
+
+.servicio .iconos{
+    height: 15rem;
+    width: 15rem;
+    background-color: var(--primario);
+    border-radius: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
  
  
 
